--- a/services.html
+++ b/services.html
@@ -204,7 +204,7 @@
                       color: #efe1e1;
                     "
                   >
-                    Provide best quality healthcare for you
+                    Provide best quality healthcare in the central region
                   </h4>
                 </div>
                 <div
@@ -219,8 +219,9 @@
                         ></span>
                         <span class="list"
                           ><strong>Affordable monthly premium packages</strong
-                          ><br />Lorem ipsum dolor sit amet, in verterem
-                          persecuti vix, sit te meis</span
+                          ><br />The hospital has affordable monthly packages,
+                          which can be subcribed either per head or as a family
+                          package.</span
                         >
                       </li>
                       <li>
@@ -228,10 +229,8 @@
                           class="fa fa-check-square-o fa-2x icon-success"
                         ></span>
                         <span class="list"
-                          ><strong>Choose your favourite services</strong
-                          ><br />Lorem ipsum dolor sit amet, in verterem
-                          persecuti vix, sit te meis</span
-                        >
+                          ><strong>Choose your favourite services</strong><br
+                        /></span>
                       </li>
                       <li>
                         <span
@@ -239,8 +238,8 @@
                         ></span>
                         <span class="list"
                           ><strong>Only use friendly environment</strong
-                          ><br />Lorem ipsum dolor sit amet, in verterem
-                          persecuti vix, sit te meis</span
+                          ><br />This system is easy to learn, use,
+                          understand.</span
                         >
                       </li>
                     </ul>
@@ -262,7 +261,7 @@
                   data-wow-delay="0.2s"
                 >
                   <img
-                    src="img/dummy/img-1.png"
+                    src="img/dummy/img-1.jpeg"
                     class="img-responsive"
                     alt=""
                   />
@@ -282,7 +281,7 @@
           font-family: 'IBM Plex Sans', sans-serif;
         "
       >
-        <div class="container">
+        <!-- <div class="container">
           <div class="row">
             <div class="col-sm-3 col-md-3">
               <div class="wow fadeInUp" data-wow-delay="0.3s">
@@ -333,7 +332,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </section>
 
       <section
@@ -349,7 +348,7 @@
           <div class="row">
             <div class="col-sm-6 col-md-6">
               <div class="wow fadeInLeft" data-wow-delay="0.2s">
-                <img src="img/dummy/img-6.png" class="img-responsive" alt="" />
+                <img src="img/dummy/img-6.jpeg" class="img-responsive" alt="" />
               </div>
             </div>
             <div class="col-sm-3 col-md-3">
@@ -363,7 +362,11 @@
                   </div>
                   <div class="service-desc">
                     <h5 class="h-light">Medical checkup</h5>
-                    <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                    <p>
+                      Comprehensive Medical Checkup thorough physical
+                      examination; includes a variety of tests depending on the
+                      age and sex and health of the person.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -378,7 +381,11 @@
                   </div>
                   <div class="service-desc">
                     <h5 class="h-light">Nursing Services</h5>
-                    <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                    <p>
+                      The North Kinangop Mission Hospital is renowned for the
+                      high quality nursing care and provision of excellent
+                      patient services nationally, regionally and globally.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -392,7 +399,11 @@
                   </div>
                   <div class="service-desc">
                     <h5 class="h-light">Pharmacy</h5>
-                    <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                    <p>
+                      Its scope includes the cultivation of plants that are used
+                      as drugs, the synthesis of chemical compounds of medicinal
+                      value, and the analysis of medicinal agents.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -407,8 +418,11 @@
                     ></span>
                   </div>
                   <div class="service-desc">
-                    <h5 class="h-light">Gyn Care</h5>
-                    <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                    <h5 class="h-light">Gyn Care/Maternity care</h5>
+                    <p>
+                      It includes the diagnosis, treatment, and care of women's
+                      reproductive system.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -423,7 +437,11 @@
                   </div>
                   <div class="service-desc">
                     <h5 class="h-light">Neurology</h5>
-                    <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                    <p>
+                      The facility has qualified Neurologist specialists that
+                      deals with the anatomy, functions, and organic disorders
+                      of nerves and the nervous system.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -434,7 +452,10 @@
                   </div>
                   <div class="service-desc">
                     <h5 class="h-light">Sleep Center</h5>
-                    <p>Vestibulum tincidunt enim in pharetra malesuada.</p>
+                    <p>
+                      North Kinangop Mission Hospital has a world class
+                      inpatient facility with more than 300 beds capacity
+                    </p>
                   </div>
                 </div>
               </div>
@@ -456,8 +477,14 @@
                 <div class="widget">
                   <h5>About North Kinangop Hospital</h5>
                   <p>
-                    Lorem ipsum dolor sit amet, ne nam purto nihil impetus, an
-                    facilisi accommodare sea
+                    North Kinangop Mission Hospital is a faith based health
+                    institution of the Catholic Dicocese of Nyahururu. The
+                    Hospital is a tool of evangelization with the primary goal
+                    of bringing good news of salvation to the patients and
+                    community at large through affordable and efficint health
+                    care. The Hospital Board of Governors, Management Team and
+                    dedicated staff and volunteers are all focused and committed
+                    to serve the patients from around and beyond.
                   </p>
                 </div>
               </div>
@@ -482,8 +509,11 @@
                 <div class="widget">
                   <h5>North Kinangop Hospital</h5>
                   <p>
-                    Nam leo lorem, tincidunt id risus ut, ornare tincidunt
-                    naqunc sit amet.
+                    North Kinangop Mission Hospital is in Nyandarua County,
+                    Kinangop Sub County, Nyandarua South District near Ndunyu
+                    Njeru town The Hospital is situated 130 Km from Nairobi
+                    along Fly over - Magumu - Njabini to Olkalou road or 30 km
+                    from Naivasha along Ndunyu Njeru road.
                   </p>
                   <ul>
                     <li>
@@ -529,10 +559,10 @@
                       <a href="#"><i class="fa fa-google-plus"></i></a>
                     </li>
                     <li class="social-vimeo">
-                      <a href="#"><i class="fa fa-vimeo-square"></i></a>
+                      <a href="#"><i class="fa fa-instagram"></i></a>
                     </li>
                     <li class="social-dribble">
-                      <a href="#"><i class="fa fa-dribbble"></i></a>
+                      <a href="#"><i class="fa fa-whatsapp"></i></a>
                     </li>
                   </ul>
                 </div>
